--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     as="fetch" crossorigin />
   <link rel="preload" href="/config/config-bfm.json"
     as="fetch" crossorigin />
-  <link rel="preload" href="/config/config-bfm-simple.json"
+  <link rel="preload" href="/config/config-simple.json"
     as="fetch" crossorigin />
   <link rel="preload"
     href="https://fonts.gstatic.com/l/font?kit=vEFy2_tTDB4M7-auWDN0ahZJW3IX2ih5nk3AucvUHf6OAVIJmeUDygwjisltrhlPAsllw1O1MAJBhw&skey=8bcb392be1d494a6&v=v7"
