--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin />
   <link rel="preload" href="https://singribet.netq.me/config/config.json" as="fetch"
     crossorigin />
-  <link rel="preload" href="/config/config-simple.json"
+  <link rel="preload" href="https://singribet.netq.me/config/config-simple.json"
     as="fetch" crossorigin />
-  <link rel="preload" href="/config/config-bfm.json"
+  <link rel="preload" href="https://singribet.netq.me/config/config-bfm.json"
     as="fetch" crossorigin />
-  <link rel="preload" href="/config/config-simple.json"
+  <link rel="preload" href="https://singribet.netq.me/config/config-simple.json"
     as="fetch" crossorigin />
   <link rel="preload"
     href="https://fonts.gstatic.com/l/font?kit=vEFy2_tTDB4M7-auWDN0ahZJW3IX2ih5nk3AucvUHf6OAVIJmeUDygwjisltrhlPAsllw1O1MAJBhw&skey=8bcb392be1d494a6&v=v7"
